--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,19 +1,13 @@
 version: 0.2
-
+ 
 phases:
   install:
-    runtime-versions:
-      nodejs: 18
     commands:
-      - npm ci
+      - npm install
   build:
     commands:
-      - npm run build
-  post_build:
-    commands:
-      - aws s3 sync build/ s3://cloudcomputingproject-bucket-fe822512 --region us-east-1 --delete
-
+      - npm run build  # Builds the project
 artifacts:
   files:
-    - "**/*"
-  base-directory: build
+    - '**/*'
+  base-directory: build  # Directory with output files (e.g., React app)
