--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,24 +2,18 @@ version: 0.2
 
 phases:
   install:
+    #runtime-versions:
+    #nodejs: 18
     commands:
-      - npm install
+      - npm ci
   build:
     commands:
-      - echo "Starting React app build..."
-      - npm run build # Builds the project
-      - echo "Build command finished. Checking directory contents:"
-      - ls -la # List contents of the current directory (root of the project)
-      - echo "Listing contents of 'build' directory (if it exists):"
-      - |
-          if [ -d "build" ]; then
-            ls -la build # List contents if 'build' directory exists
-          else
-            echo "'build' directory does not exist."
-          fi
-      - echo "Finished directory checks."
+      - npm run build
+  post_build:
+    commands:
+      - aws s3 sync build/ s3://cloudcomputingproject-bucket-3f109847 --delete
 
 artifacts:
   files:
-    - '**/*'
-  base-directory: build # Directory with output files (e.g., React app)
+    - "**/*"
+  base-directory: build
